components/ua/merge-user-tool/overlays/prod/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: merge-user-tool
  namespace: apps
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
  hostnames:
    - "*.facilities.rl.ac.uk"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /users/merges
      backendRefs:
        - name: merge-user-tool
          port: 8080
